--- a/composer.json
+++ b/composer.json
@@ -9,7 +9,7 @@
     ],
     "autoload": {        
         "psr-4": {
-            "Helpers": "src/Helpers"
+            "Helpers": "src/"
         }
     },
     "require": {},
